--- a/composer.json
+++ b/composer.json
@@ -3,6 +3,11 @@
   "license": "MIT",
   "minimum-stability": "dev",
   "prefer-stable": true,
+  "config": {
+    "platform" : {
+      "php" : "7.1.33"
+    }
+  },
   "autoload": {
     "psr-4": {
       "Concrete5\\Translate\\": "src"
