--- a/composer.json
+++ b/composer.json
@@ -4,6 +4,7 @@
   "minimum-stability": "dev",
   "prefer-stable": true,
   "config": {
+    "sort-packages" : true,
     "platform" : {
       "php" : "7.1.33"
     }
@@ -14,10 +15,10 @@
     }
   },
   "require": {
-    "illuminate/container": "5.2.*",
-    "concrete5/core": "dev-develop#ae91fad960a4a08f1be916b438d2035924d56fdf",
-    "concrete5/community_translation": "@stable",
     "composer/installers": "dev-master",
+    "concrete5/community_translation": "@stable",
+    "concrete5/core": "dev-develop#ae91fad960a4a08f1be916b438d2035924d56fdf",
+    "illuminate/container": "5.2.*",
     "mlocati/concrete5-translation-library": "^1.6.0",
     "portlandlabs/addon_concrete5_theme": "^1.0",
     "vlucas/phpdotenv": "^2.4"
