--- a/composer.json
+++ b/composer.json
@@ -4,6 +4,7 @@
   "minimum-stability": "dev",
   "prefer-stable": true,
   "config": {
+    "optimize-autoloader" : true,
     "sort-packages" : true,
     "platform" : {
       "php" : "7.1.33"
